[lworld] Assert during C2 compilation due to inconsistent JVMState at safepoint

XMLWordPrintable

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/node.hpp:389), pid=666542, tid=666555
      # assert(i < _max) failed: oob: i=64, _max=64

      Current CompileTask:
      C2: 970 571 b 4 MainClass::test (131 bytes)

      Stack: [0x00007f2119f34000,0x00007f211a035000], sp=0x00007f211a030130, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x15d3257] Node::replace_edges_in_range(Node*, Node*, int, int)+0x87
      V [libjvm.so+0xe765d9] InlineTypeBaseNode::make_scalar_in_safepoints(PhaseIterGVN*, bool)+0x249
      V [libjvm.so+0x13fcb9a] PhaseMacroExpand::scalar_replacement(AllocateNode*, GrowableArray<SafePointNode*>&)+0x144a
      V [libjvm.so+0x13fd66e] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.0]+0x2ae
      V [libjvm.so+0x13fdc5b] PhaseMacroExpand::eliminate_macro_nodes()+0x35b
      V [libjvm.so+0x13fdfb9] PhaseMacroExpand::expand_macro_nodes()+0x19
      V [libjvm.so+0xa4f544] Compile::Optimize()+0x1774
      V [libjvm.so+0xa5125d] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x19dd
      V [libjvm.so+0x86d0fa] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
      V [libjvm.so+0xa61898] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa623e8] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x198e646] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1994fc0] Thread::call_run()+0x100
      V [libjvm.so+0x164f926] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: