8261037: [lworld] Assert during C2 compilation due to inconsistent JVMState at safepoint